--- a/tentangKami.html
+++ b/tentangKami.html
@@ -40,43 +40,49 @@
             </ul>
         </nav>
 
-<!-- KONTEN -->
+        <!-- KONTEN -->
+
     <div class="konten">
       <h1>Tentang Kami</h1>
-      <p>&nbsp&nbsp&nbsp&nbsp&nbsp Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consequatur voluptatem deleniti ipsum aliquam, expedita et earum. Eligendi placeat animi voluptatem assumenda minima quidem sed, adipisci necessitatibus cumque libero! Molestiae modi, neque sed commodi autem vitae ratione libero, velit nam sint necessitatibus? Quaerat ratione ipsum, repudiandae ullam id sapiente beatae, assumenda libero. Soluta dolorum ratione ad atque voluptatem ipsam aperiam enim quos adipisci, magni aliquam nobis temporibus commodi vitae eos iste a odio corrupti dignissimos optio assumenda obcaecati deserunt rem modi. Dolorum repudiandae asperiores, eum sit! Iure vitae, unde. Quasi, sapiente totam similique nihil tempora nesciunt autem reprehenderit ratione eaque.</p>
+      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
 
-    <!-- footer -->
-    <div class="clear"></div>
-        <div class="footer tentangKami">
-            <div>
-              <a href="tentangKami.html">Tentang Kami</a>
-              <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
-              <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
-            </div>
-            <div>
-                <p>© 2019</p>
-            </div>
+    </div>
+    <!-- FOOTER -->
+<div class="clear"></div>
+    <footer>
+        <div>
+            <a href="tentangKami.html">Tentang Kami</a>
+            <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+            <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
         </div>
+        <div>
+            <p>© 2019</p>
+        </div>
+    </footer>
 
-        <script>
-        var x = document.getElementById("bar");
-        var y = document.getElementById("find");
-        function bar() {
-           if (x.style.display === "none") {
-             x.style.display = "block";
-             y.style.display = "none";
-           } else {
-             x.style.display = "none";
-           }
-          }
-          function find() {
-             if (y.style.display === "none") {
-               y.style.display = "block";
-               x.style.display = "none";
-             } else {
-               y.style.display = "none";
-             }
-            }
-        </script>
-    </body>
-    </html>
+    <script>
+    var x = document.getElementById("bar");
+    var y = document.getElementById("find");
+    function bar() {
+       if (x.style.display === "none") {
+         x.style.display = "block";
+         y.style.display = "none";
+       } else {
+         x.style.display = "none";
+       }
+      }
+      function find() {
+         if (y.style.display === "none") {
+           y.style.display = "block";
+           x.style.display = "none";
+         } else {
+           y.style.display = "none";
+         }
+        }
+    </script>
+</body>
+</html>
