--- a/semua.html
+++ b/semua.html
@@ -42,11 +42,73 @@
 
         <!-- KONTEN -->
 
-    <div class="konten">
-        <div class="">
-            <div>Semua Komik</div>
-            
-        </div>
-    </div>
+            <!-- KONTEN -->
+
+            <div class="konten">
+                <div class="main">
+                    <div class="isi">
+                        <div class="atas">
+                            <div class="atas-kiri">
+                                <h3>Semua Komik</h3>
+                            </div>
+                            <div class="atas-kanan">
+                                <a href="terbaru.html">Lihat semua</a>
+                            </div>
+                        </div>
+                        <div class="cover1">
+                            <div>
+                                <a href="detail.html">
+                                    <img src="img/cover.jpg" alt="cover" >
+                                    <br> Naruto <br>
+                                    Episode 222
+                                </a>
+                            </div>
+                        </div>
+                        <div class="cover1">
+                            <div>
+                                <a href="">
+                                    <img src="img/opm.jpg" alt="cover" >
+                                    <br> OPM <br>
+                                    Episode 222
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+ <!-- FOOTER -->
+ <div class="clear"></div>
+ <footer>
+     <div>
+         <a href="tentangKami.html">Tentang Kami</a>
+         <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+         <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
+     </div>
+     <div>
+         <p>© 2019</p>
+     </div>
+ </footer>
+
+ <script>
+ var x = document.getElementById("bar");
+ var y = document.getElementById("find");
+ function bar() {
+    if (x.style.display === "none") {
+      x.style.display = "block";
+      y.style.display = "none";
+    } else {
+      x.style.display = "none";
+    }
+   }
+   function find() {
+      if (y.style.display === "none") {
+        y.style.display = "block";
+        x.style.display = "none";
+      } else {
+        y.style.display = "none";
+      }
+     }
+ </script>
 </body>
 </html>
