--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                     <div>
                         <a href="detail.html">
                             <img src="img/cover.jpg" alt="cover" >
-                            <br> Naruto <br>
-                            Episode 222
+                            <div>
+                                Naruto
+                                Episode 222
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -66,8 +68,10 @@
                     <div>
                         <a href="">
                             <img src="img/opm.jpg" alt="cover" >
-                            <br> OPM <br>
-                            Episode 222
+                            <div>
+                                Naruto
+                                Episode 222
+                            </div>
                         </a>
                     </div>
                 </div>
