tambah css halaman detail

--- a/detail.html
+++ b/detail.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/detail.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
@@ -40,50 +41,40 @@
         </nav>
 
     <section> <!-- opo div enake  ? -->
-        <div>
-            <img src="https://2img.net/h/i166.photobucket.com/albums/u84/shizen-miera/jinchuuriki.jpg" alt="">   <!-- gambar cover banner komik -->
+        <div class="g">
+            <img src="img/koveropm.png" alt="">   <!-- gambar cover banner komik -->
         </div>
-        <div> <!-- gawe cover komik e -->
-            <div>
-                <div>
-                    <img src="img/cover.jpg" alt="">  <!-- cover komik -->
+        <div class="a"> <!-- gawe cover komik e -->
+            <div class="a1">
+                <div class="aa1">
+                    <img src="img/opm.jpg" alt="">  <!-- cover komik -->
                 </div>
             </div>
-            <div>
-                <h1>Naruto</h1>    <!-- gawe judul komik dll -->
-                <div>
-                    <span>
-                        <!-- penulis -->
-                    </span>
-                </div>
-                <div>
-                    <span>
-                        <!-- ongoing -->
-                    </span>
-                </div>
-                <div>
-                    <!-- gawe tombol beli -->
-                </div>
+            <div class="a2">
+                <h1>One Punch-Man</h1>    <!-- gawe judul komik dll -->
+                <div class="par"><p>Yusuke Murata, ONE</p><!-- penulis -->
+                    <p>Bersambung | 147 Episode</p><!-- ongoing --></div>
+                <a href="">Beli</a>
             </div>
         </div>
 
-        <div> <!-- gawe deskripsi-->
+        <div class="b"> <!-- gawe deskripsi-->
             <div>
-                Deskripsi
+                <h3>Deskripsi</h2>
             </div>
             <ul>
-                <li>Seorang bocah bercita-cita menjadi hokage</li>
-                <li>Berjuang keras menyelamatkan sahabatnya</li>
-                <li>Melawan senior sepeguruan</li>
+                <li>Di dunia yang penuh makhluk super yang bisa ia kalahkan, Saitama mendambakan untuk menemukan lawan yang layak.</li>
+                <li>Dia juga kehilangan seluruh rambutnya karena latihan yang ekstensif, jadi dia bosan dan botak. Sangat tragis.</li>
+                <li>Saitama dapat melumpuhkan siapa saja dan apa pun hanya dengan satu pukulan.</li>
             </ul>
             <button>
                 Tampilkan lebih banyak
             </button>
         </div>
 
-        <div> <!-- gawe tulisan chapter e-->
+        <div class="c"> <!-- gawe tulisan chapter e-->
             <div>
-                Chapter
+                <h3>Chapter</h3>
             </div>
             <div>
                 ongoing, neew chapter every 7 days
