--- a/detail.html
+++ b/detail.html
@@ -47,7 +47,7 @@
         <div class="a"> <!-- gawe cover komik e -->
             <div class="a1">
                 <div class="aa1">
-                    <img src="img/opm.jpg" alt="">  <!-- cover komik -->
+                    <img src="img/onepm.jpg" alt="">  <!-- cover komik -->
                 </div>
             </div>
             <div class="a2">
