nyobak tambah kontennya

--- a/terbaru.html
+++ b/terbaru.html
@@ -73,6 +73,42 @@
                         </a>
                     </div>
                 </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="img/cover.jpg" alt="cover" >
+                            <br> Naruto <br>
+                            Episode 222
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="">
+                            <img src="img/opm.jpg" alt="cover" >
+                            <br> OPM <br>
+                            Episode 222
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="detail.html">
+                            <img src="img/cover.jpg" alt="cover" >
+                            <br> Naruto <br>
+                            Episode 222
+                        </a>
+                    </div>
+                </div>
+                <div class="cover1">
+                    <div>
+                        <a href="">
+                            <img src="img/opm.jpg" alt="cover" >
+                            <br> OPM <br>
+                            Episode 222
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
 
