--- a/detail.html
+++ b/detail.html
@@ -45,11 +45,11 @@
             <img style="z-index: -10" src="img/koveropm.png" alt="">   <!-- gambar cover banner komik -->
         </div>
 
-            <div class="kiri">
+            <div class="d-kiri">
                 <div class="a"> <!-- gawe cover komik e -->
                     <div class="a1">
                         <div class="aa1">
-                            <img src="img/" alt="">  <!-- cover komik -->
+                            <img src="img/onepm.jpg" alt="">  <!-- cover komik -->
                         </div>
                     </div>
                     <div class="a2">
@@ -99,13 +99,41 @@
             </div>
 
         <div class="d-kanan">
-            <div class="k-k">
-                <div class="k-k">
-                    <h3>Komik Terkait</h3>
-                    <a href="">Lihat Semua</a>
+            <div class="k">
+                <div class="kk">
+                    <div class="kk-kiri">
+                        <h3>Komik Terkait</h3>
+                    </div>
+                    <div class="kk-kanan">
+                        <a href="">Lihat Semua</a>
+                    </div>
+                    <div class="kk-isi">
+                        <div class="kk-g">
+
+                        </div>
+                        <div class="kk-konten">
+                            <h5>One Puch-Man</h5>
+                        </div>
+                    </div>
+                    <div class="kk-isi">
+                        <div class="kk-g">
+
+                        </div>
+                        <div class="kk-konten">
+                            <h5>One Puch-Man</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="k-kk">
-                    div
+
+            </div>
+            <div class="l">
+                <div class="ll">
+                    <div class="ll-kiri">
+                        <h3>Komik Serupa</h3>
+                    </div>
+                    <div class="ll-kanan">
+                        <a href="">Lihat Semua</a>
+                    </div>
                 </div>
             </div>
         </div>
