--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="isi">
                 <div class="atas">
                     <div class="atas-kiri">
-                        <h3>TRENDING UPDATE</h3>
+                        <p class="jud">TRENDING UPDATE</p>
                     </div>
                     <div class="atas-kanan">
                         <a href="terbaru.html">Lihat semua</a>
@@ -58,23 +58,24 @@
                         <a href="detail.html">
                             <img src="img/cover.jpg" alt="cover" >
                             <div>
-                                Naruto
-                                Episode 222
+                                <p class="judul">Naruto</p>
+                                <p class="episode">Episode 222</p>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="cover1">
                     <div>
-                        <a href="">
+                        <a href="detail.html">
                             <img src="img/opm.jpg" alt="cover" >
                             <div>
-                                Naruto
-                                Episode 222
+                                <p class="judul">One Puch-Man</p>
+                                <p class="episode">Episode 179</p>
                             </div>
                         </a>
                     </div>
                 </div>
+                <div class="clear"></div>
             </div>
 
             <div class="clear"></div>
@@ -82,7 +83,7 @@
             <div class="isi">
                 <div class="atas">
                         <div class="atas-kiri">
-                            <h3>UPDATE TERBARU</h3>
+                            <p class="jud">UPDATE TERBARU</p>
                         </div>
                         <div class="atas-kanan">
                             <a href="terbaru.html">Lihat semua</a>
@@ -93,67 +94,83 @@
                         <div class="column">
                             <div class="card">
                                 <a href="">
-                                    <img src="img/bnh.jpg" alt="cover" sizes="20%" >
+                                    <img src="img/bnh120px.jpg" alt="cover" sizes="20%" >
                                 </a>
                             </div>
                         </div>
                         <div class="column">
                             <div class="card">
-                                <P>bnh</P>
-                                <P>2 Episode baru</P>
+                                <p class="judul">One Puch-Man</p>
                             </div>
                         </div>
                         <div class="column">
                             <div class="card">
-                                <a href="">Episode 177</a>
+                                <a href=""><p class="episode">Episode 179</p></a>
                             </div>
                         </div>
-
+                        <div class="column">
+                                <div class="card">
+                                    <p>55 Menit</p>
+                                </div>
+                            </div>
                     </div>
                     <div class="row">
-                        <a href="">
-                            <img src="img/sololevel.jpg" alt="cover" sizes="20%" >
-                            <div>
-                                Solo Leveling <br>
-                                Episode 222
+                            <div class="column">
+                                <div class="card">
+                                    <a href="">
+                                        <img src="img/bnh120px.jpg" alt="cover" sizes="20%" >
+                                    </a>
+                                </div>
                             </div>
-                        </a>
-                    </div>
-                    <div class="cover2">
-                        <a href="">
-                            <img src="img/onp.jpg" alt="cover" sizes="20%" >
-                            <div>
-                                One Piece <br>
-                                Episode 222
+                            <div class="column">
+                                <div class="card">
+                                    <p class="judul">One Puch-Man</p>
+                                </div>
                             </div>
-                        </a>
-                    </div>
-            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <a href=""><p class="episode">Episode 179</p></a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                    <div class="card">
+                                        <p>55 Menit</p>
+                                    </div>
+                                </div>
+                        </div>  
+                </div>
         </div>
 
 
 
             <div class="sidebar">
                 <div class="kanan1">
-                    <div><h3>Cari Menurut Genre</h3></div>
+                    <div class="atas">
+                         <p class="jud">Cari Menurut Genre</p>
+                    </div>
                     <div class="is">
                         <ul>
                             <li><a href="">Aksi</a></li>
                             <li><a href="">Drama</a></li>
                             <li><a href="">Horor</a></li>
-                            <li><a href="">Isekai</a></li>
                             <li><a href="">Komedi</a></li>
                             <li><a href="">Petualangan</a></li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="btn-banyak">
                         <a href="">Tampilkan lebih banyak</a>
                     </div>
                 </div>
 
                 <div class="kanan2">
-                    <h3>Paling Populer</h3>
-                    <a href="">Lihat semua</a>
+                        <div class="atas">
+                                <div class="atas-kiri">
+                                    <p class="jud">Paling Populer</p>
+                                </div>
+                                <div class="atas-kanan">
+                                    <a href="terbaru.html">Lihat semua</a>
+                                </div>
+                            </div>
                     <div isi2>
                         <div>
                             <div>1.</div>
@@ -178,9 +195,10 @@
                     </div>
                 </div>
             </div>
+        <div class="clear"></div>
     </div>
     <!-- FOOTER -->
-<div class="clear"></div>
+
     <footer>
         <div>
             <a href="tentangKami.html">Tentang Kami</a>
