--- a/masuk.html
+++ b/masuk.html
@@ -46,7 +46,7 @@
         <h1>MASUK</h1>
         <input type="email" name="" id="" placeholder="Email"><br>
         <input type="password" name="" id="" placeholder="Kata sandi"><br>
-        <button type="button" name="button"><a href="index.html">Masuk</a></button> <br>
+        <button type="button" name="button" onclick="link();">Masuk</button> <br>
         <a href="daftar1.html"><u>Belum punya akun?</u></a>
       </form>
     </div>
@@ -67,6 +67,9 @@
     <script>
     var x = document.getElementById("bar");
     var y = document.getElementById("find");
+    function link(){
+      window.location.href = "index.html";
+    }
     function bar() {
        if (x.style.display === "none") {
          x.style.display = "block";
