--- a/daftar2.html
+++ b/daftar2.html
@@ -98,8 +98,7 @@
               break;
               }
            }
-
-            // window.location.href = "masuk.html";
+            window.location.href = "masuk.html";
           }
 
 
