memperbaiki validasi final daftar 2

--- a/daftar2.html
+++ b/daftar2.html
@@ -46,12 +46,13 @@
       <form action="">
         <h1>DAFTAR</h1><br>
         <input type="password" name="" placeholder="Masukkan kata sandi"  id="pass"><br>
-        <input type="password" name="" id="" placeholder="Konfirmasi kata sandi"><br>
-        <p style="display:none;color:red;" id="panjangPendek">password panjangnya harus 5 sampai 12 karakter</p>
-        <p style="display:none;color:red;" id="kKecil">password harus memuat setidaknya 1 karakter huruf kecil</p>
-        <P style="display:none; color:red;" id="kBesar">password harus memuat setidaknya 1 karakter huruf besar</P>
-        <p style="display:none;color:red;" id="kAngka">password harus memuat setidaknya 1 karakter angka</p>
-        <button type="button" name="button" onclick="coba();">Daftar</button>
+        <input type="password" name="" id="pass2" placeholder="Konfirmasi kata sandi"><br>
+        <p style="display:none;color:red;" id="samain">*konfirmasi password tidak sama</p>
+        <p style="display:none;color:red;" id="panjangPendek">*password panjangnya harus 5 sampai 12 karakter</p>
+        <p style="display:none;color:red;" id="kKecil">*password harus memuat setidaknya 1 karakter huruf kecil</p>
+        <P style="display:none; color:red;" id="kBesar">*password harus memuat setidaknya 1 karakter huruf besar</P>
+        <p style="display:none;color:red;" id="kAngka">*password harus memuat setidaknya 1 karakter angka</p>
+        <button type="button" name="button" onclick="validasi();">Daftar</button>
       </form>
     </div>
 
@@ -72,61 +73,68 @@
         var x = document.getElementById("bar");
         var y = document.getElementById("find");
 // validasi
-        function coba(){
+        function validasi(){
           var iskAngka = false;
           var iskBesar = false;
           var iskKecil = false;
           var isPendek = false;
           var isPanjang = false;
           var cek = document.getElementById("pass");
-          if (cek.value.length>12){
-            isPendek = true;
-            cek.value = "";
-          }else if(cek.value.length<5){
-            isPendek = true;
-          }else{
-            alert(cek.value);
+          var cek2 = document.getElementById("pass2");
+          if(pass.value == pass2.value){
+            document.getElementById("samain").style.display = "none";
+            if (cek.value.length>12){
+              isPendek = true;
+              cek.value = "";
+            }else if(cek.value.length<5){
+              isPendek = true;
+            }else{
+              alert(cek.value);
 
-            //cek ada tidaknya angka huruf kecil besar
-            for (var i = 0; i < cek.value.length; i++){
+              //cek ada tidaknya angka huruf kecil besar
+              for (var i = 0; i < cek.value.length; i++){
+                var ch = cek.value.charAt(i);
+                if(ch >= "a" && ch <= "z"){
+                  iskKecil = true;
+                  break;
+                  }
+               }
+               for (var i = 0; i < cek.value.length; i++){
+               var ch = cek.value.charAt(i);
+               if(ch >= "A" && ch <= "Z"){
+                 iskBesar = true;
+                 break;
+                 }
+              }
+              for (var i = 0; i < cek.value.length; i++){
               var ch = cek.value.charAt(i);
-              if(ch >= "a" && ch <= "z"){
-                iskKecil = true;
+              if(ch >= "0" && ch <= "9"){
+                iskAngka = true;
                 break;
                 }
              }
-             for (var i = 0; i < cek.value.length; i++){
-             var ch = cek.value.charAt(i);
-             if(ch >= "A" && ch <= "Z"){
-               iskBesar = true;
-               break;
-               }
-            }
-            for (var i = 0; i < cek.value.length; i++){
-            var ch = cek.value.charAt(i);
-            if(ch >= "0" && ch <= "9"){
-              iskAngka = true;
-              break;
-              }
-           }
-           //cek ketika ada dangka huruf kecil dan besar kalau ada jadikan display block atau terlihat
-           if (iskKecil == false){
-             document.getElementById("kKecil").style.display = "block";
-           } else{
-             document.getElementById("kKecil").style.display = "none";
-           }
-           if (iskBesar == false){
-             document.getElementById("kBesar").style.display = "block";
-           } else{
-             document.getElementById("kBesar").style.display = "none";
-           }
-           if (iskAngka == false){
-             document.getElementById("kAngka").style.display = "block";
-           } else{
-             document.getElementById("kAngka").style.display = "none";
-           }
+             //cek ketika ada dangka huruf kecil dan besar kalau ada jadikan display block atau terlihat
+             if (iskKecil == false){
+               document.getElementById("kKecil").style.display = "block";
+             } else{
+               document.getElementById("kKecil").style.display = "none";
+             }
+             if (iskBesar == false){
+               document.getElementById("kBesar").style.display = "block";
+             } else{
+               document.getElementById("kBesar").style.display = "none";
+             }
+             if (iskAngka == false){
+               document.getElementById("kAngka").style.display = "block";
+             } else{
+               document.getElementById("kAngka").style.display = "none";
+             }
 
+            }
+          }else{
+              document.getElementById("samain").style.display = "block";
           }
+
           if (isPanjang == true || isPendek == true){
             document.getElementById("panjangPendek").style.display = "block";
           } else{
